--- a/index.html
+++ b/index.html
@@ -1,14 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>jwker.com</title>
+	<meta charset="UTF-8">
+	<title>聚合搜索 - jwkso.com</title>
+
+	<link rel="stylesheet" href="src/base.css">
+	<link rel="stylesheet" href="src/font-awesome.min.css">
+	<link rel="stylesheet" href="src/index.css">
+
 </head>
 <body>
+<div class="container">
+<div id="mydiv"></div>
+<div class="header">
+	<h1>聚合搜索</h1>
+</div>
+<div class="search">
+	<ul class="gloup"></ul>
+	<div class="input">
+		<form target="_blank" action="" method="get">
+			<input type="text" class="search_input" placeholder="">
+			<button type="submit" class="search_btn"><i class="icon-search"></i></button>
+		</form>
+	</div>
+</div>
+<div class="plate">
+	<ul class="plate_menu">
+		<li data-num="0"><i class="icon-lightbulb"></i>常用</li>
+		<li data-num="1"><i class="icon-lightbulb"></i>搜索</li>
+		<li data-num="2"><i class="icon-lightbulb"></i>前端</li>
+		<li data-num="3"><i class="icon-lightbulb"></i>阅读</li>
+		<li data-num="4"><i class="icon-lightbulb"></i>视频</li>
+		<li data-num="5"><i class="icon-lightbulb"></i>学习</li>
+		<li data-num="6"><i class="icon-lightbulb"></i>科技</li>
+		<li data-num="7"><i class="icon-lightbulb"></i>购物</li>
+		<li data-num="8"><i class="icon-lightbulb"></i>其他</li>
+	</ul>
+	<ul class="plate_conn">
+		<!-- 常用 -->
+		<li>
+			<a target="_blank" href="http://www.baidu.com/">百度</a>
+			<a target="_blank" href="http://www.youku.com/">优酷</a>
+			<a target="_blank" href="http://weibo.com/">微博</a>
+			<a target="_blank" href="http://www.zhihu.com/">知乎</a>
+			<a target="_blank" href="http://www.lofter.com/">Lofter</a>
+			<a target="_blank" href="http://www.jd.com/">京东</a>
+			<a target="_blank" href="http://www.taobao.com/">淘宝</a>
+			<a target="_blank" href="http://v.hao123.com/">123影视</a>
+			<a target="_blank" href="http://www.yy6080.org/">6080</a>
+			<a target="_blank" href="http://sy.58.com/">58同城</a>
+			<a target="_blank" href="https://wx.qq.com/">微信</a>
+			<a target="_blank" href="http://tieba.baidu.com/">贴吧</a>
+			<a target="_blank" href="http://mail.163.com/">163邮箱</a>
+			<a target="_blank" href="http://www.qq.com/">腾讯</a>
+			<a target="_blank" href="http://map.baidu.com/">百度地图</a>
+			<a target="_blank" href="http://www.lagou.com/">拉勾网</a>
+			<a target="_blank" href="https://cloud.smartisan.com/#/notes">锤子便签</a>
+			<a target="_blank" href="http://fanyi.baidu.com/#auto/zh/">百度翻译</a>
+			<a target="_blank" href="https://github.com">Github</a>
+		</li>
+		<!-- 其他搜索 -->
+		<li>
+			<a target="_blank" href="http://s.weibo.com/">微博</a>
+			<a target="_blank" href="http://www.panc.cc/">胖次</a>
+			<a target="_blank" href="http://www.pansou.com/">盘搜</a>
+			<a target="_blank" href="http://www.panduoduo.net/">盘多多</a>
+			<a target="_blank" href="http://md5.daimugua.com/">呆木瓜</a>
+			<a target="_blank" href="http://www.panyisou.com/">盘易搜</a>
+			<a target="_blank" href="https://wangpan007.com/">网盘搜索</a>
+			<a target="_blank" href="http://www.wangpansou.cn/">网盘搜</a>
+			<a target="_blank" href="http://www.pansoso.com/">盘搜搜</a>
+			<a target="_blank" href="http://www.soku.com/">优酷</a>
+			<a target="_blank" href="http://allsearch.vip/">Allsearch</a>
+		</li>
+		<!-- 前端 -->
+		<li>
+			<a target="_blank" href="https://github.com">Github</a>
+			<a target="_blank" href="http://www.w3school.com.cn/">w3cschool</a>
+			<a target="_blank" href="http://www.zhihu.com/">知乎</a>
+			<a target="_blank" href="http://www.whycss.com/">前端导航</a>
+			<a target="_blank" href="http://www.xuanfengge.com/">轩枫阁</a>
+			<a target="_blank" href="http://www.imooc.com/">慕课网</a>
+			<a target="_blank" href="http://study.163.com/">网易云课堂</a>
+			<a target="_blank" href="http://css.doyoe.com/">css手册</a>
+			<a target="_blank" href="http://jquery.cuishifeng.cn/">jQuery API</a>
+			<a target="_blank" href="http://www.runoob.com/">w3c菜鸟教程</a>
+			<a target="_blank" href="http://demo.jb51.net/js/myfocus/demo.html">焦点图</a>
+			<a target="_blank" href="http://hao.uisdc.com/">设计导航</a>
+			<a target="_blank" href="http://huaban.com/">花瓣</a>
+			<a target="_blank" href="http://www.zhaozi.cn/img/color1.htm">颜色代码</a>
+			<a target="_blank" href="http://www.divcss5.com/">DIVCSS5</a>
+			<a target="_blank" href="http://www.html5tricks.com/">html5tricks</a>
+			<a target="_blank" href="http://www.w3help.org/zh-cn/kb/">W3Help</a>
+			<a target="_blank" href="http://js.fgm.cc/learn/">实例索引</a>
+			<a target="_blank" href="http://www.bootcss.com/">bootcss中文网</a>
+			<a target="_blank" href="http://www.oschina.net/">开源中国</a>
+			<a target="_blank" href="http://www.jq22.com/">jQuery插件库</a>
+			<a target="_blank" href="http://www.htmleaf.com/">jQuery之家</a>
+			<a target="_blank" href="http://www.25xt.com/">25学堂</a>
+			<a target="_blank" href="http://www.iguoguo.net/">爱果果</a>
+			<a target="_blank" href="https://juejin.im/">掘金</a>
+			<a target="_blank" href="http://gitbook.cn/">码字</a>
+			<a target="_blank" href="http://www.ruanyifeng.com/blog/">阮一峰博客</a>
+			<a target="_blank" href="https://segmentfault.com/">segmentfault</a>
+		</li>
+		<!-- 阅读 -->
+		<li>
+			<a target="_blank" href="http://news.ifeng.com/">凤凰资讯</a>
+			<a target="_blank" href="http://news.qq.com/">腾讯新闻</a>
+			<a target="_blank" href="http://ln.qq.com/">大辽网</a>
+			<a target="_blank" href="http://www.infzm.com/">南方周末</a>
+			<a target="_blank" href="http://yuedu.163.com/">网易云阅读</a>
+			<a target="_blank" href="http://www.douban.com/">豆瓣</a>
+			<a target="_blank" href="http://zhuanlan.zhihu.com/Weekly">知乎周刊</a>
+			<a target="_blank" href="http://www.xinli001.com/">壹心理</a>
+			<a target="_blank" href="http://fm.xinli001.com/">壹心理FM</a>
+			<a target="_blank" href="http://www.lizhi.fm/">荔枝FM</a>
+			<a target="_blank" href="http://wemedia.haosou.com/">360自媒体</a>
+			<a target="_blank" href="http://cn.technode.com/post/category/yiwen/">一问</a>
+		</li>
+		<!-- 视频 -->
+		<li>
+			<a target="_blank" href="http://www.youku.com/">优酷</a>
+			<a target="_blank" href="http://www.iqiyi.com/">爱奇艺</a>
+			<a target="_blank" href="http://www.letv.com/">乐视</a>
+			<a target="_blank" href="http://v.baidu.com/">百度视频</a>
+			<a target="_blank" href="http://www.cntv.cn/">CNTV</a>
+			<a target="_blank" href="http://v.ifeng.com/">凤凰视频</a>
+			<a target="_blank" href="http://v.qq.com/">腾讯视频</a>
+			<a target="_blank" href="http://www.yy.com/">YY</a>
+			<a target="_blank" href="http://www.shiting5.com/">视听网</a>
+			<a target="_blank" href="http://www.80s.cn/">80s</a>
+			<a target="_blank" href="http://v.hao123.com/dianying/">电影</a>
+			<a target="_blank" href="http://v.hao123.com/dianshi/">电视剧</a>
+			<a target="_blank" href="http://v.hao123.com/zongyi/">综艺</a>
+			<a target="_blank" href="http://v.hao123.com/dongman/">动漫</a>
+			<a target="_blank" href="http://www.hao123.com/video/wangju">网剧</a>
+			<a target="_blank" href="http://v.hao123.com/">123影视</a>
+			<a target="_blank" href="http://www.yy6080.org/">6080</a>
+			<a target="_blank" href="http://www.soku.com/search_video/q_%E6%9A%B4%E8%B5%B0%E5%A4%A7%E4%BA%8B%E4%BB%B6?f=1&kb=04113050yv41000__&_rp=1ajtpknpn4ti">暴走大事件</a>
+			<a target="_blank" href="http://www.feidieshuo.com/">飞碟说</a>
+		</li>
+		<!-- 学习 -->
+		<li>
+			<a target="_blank" href="http://www.imooc.com/">慕课网</a>
+			<a target="_blank" href="http://study.163.com/">网易云课堂</a>
+			<a target="_blank" href="http://www.xuetangx.com/">学堂在线</a>
+			<a target="_blank" href="http://open.163.com/">网易公开课</a>
+			<a target="_blank" href="http://www.duobei.com/">多贝公开课</a>
+			<a target="_blank" href="http://ke.qq.com/">腾讯课堂</a>
+			<a target="_blank" href="http://kejiao.cntv.cn/special/kaijiang/index.shtml">开讲啦</a>
+			<a target="_blank" href="http://yixi.tv/">一席</a>
+			<a target="_blank" href="http://i.youku.com/u/UMTczNDY3ODg=">优酷老友记</a>
+			<a target="_blank" href="http://edu.51cto.com/">51CTO</a>
+		</li>
+		<!-- 科技 -->
+		<li>
+			<a target="_blank" href="http://www.zol.com.cn/">中关村</a>
+			<a target="_blank" href="http://www.icpcw.com/">电脑报</a>
+			<a target="_blank" href="http://www.ithome.com/">IT之家</a>
+			<a target="_blank" href="http://digi.tech.qq.com/">腾讯数码</a>
+			<a target="_blank" href="http://www.geekpark.net/">极客公园</a>
+			<a target="_blank" href="http://shixian.com/">实现</a>
+			<a target="_blank" href="http://www.cnmo.com/">手机中国</a>
+			<a target="_blank" href="http://tech.youku.com/">优酷科技</a>
+			<a target="_blank" href="http://mobile.163.com/">网易手机</a>
+			<a target="_blank" href="http://www.zealer.com/">zealer</a>
+			<a target="_blank" href="http://www.fview.cn/">fview</a>
+			<a target="_blank" href="http://weibo.com/703723424">科技美学微博</a>
+			<a target="_blank" href="http://www.igao7.com/">爱搞机</a>
+			<a target="_blank" href="http://www.hao123.com/mobile">123手机</a>
+			<a target="_blank" href="http://bbs.zhiyoo.com/">安智论坛</a>
+			<a target="_blank" href="http://shouji.jd.com/">京东手机</a>
+			<a target="_blank" href="http://weibo.com/sjbjz?from=feed&loc=nickname">水哥报价</a>
+			<a target="_blank" href="http://www.apple.com/cn/">苹果</a>
+			<a target="_blank" href="http://www.smartisan.com/">锤子科技</a>
+			<a target="_blank" href="http://www.oneplus.cn/">一加</a>
+			<a target="_blank" href="http://www.mi.com/">小米</a>
+			<a target="_blank" href="http://www.meizu.com/">魅族</a>
+			<a target="_blank" href="http://www.guokr.com/">果壳</a>
+		</li>
+		<!-- 购物 -->
+		<li>
+			<a target="_blank" href="http://www.jd.com/">京东</a>
+			<a target="_blank" href="http://www.taobao.com/">淘宝</a>
+			<a target="_blank" href="https://www.tmall.com/">天猫</a>
+			<a target="_blank" href="http://www.dangdang.com/">当当</a>
+			<a target="_blank" href="http://bj.jumei.com/">聚美</a>
+			<a target="_blank" href="http://www.suning.com/">苏宁</a>
+			<a target="_blank" href="http://dongxi.douban.com/">豆瓣东西</a>
+		</li>
+		<!-- 其他 -->
+		<li>
+			<a target="_blank" href="http://www.douban.com/">豆瓣</a>
+			<a target="_blank" href="http://music.163.com/">网易云音乐</a>
+			<a target="_blank" href="https://mp.weixin.qq.com/">微信公众平台</a>
+			<a target="_blank" href="http://xiumi.us/">秀米</a>
+			<a target="_blank" href="http://www.lagou.com/">拉勾网</a>
+			<a target="_blank" href="http://sy.zu.anjuke.com/">安租客</a>
+		</li>
+		
+	</ul>
+</div>
+<div class="footer"></div>
+</div>
+<!-- <div class="link">
+	<a target="_blank" href="./nav">网址导航</a>
+	<a target="_blank" href="https://github.com/shoujiren">Github</a>
+	<a target="_blank" href="http://jwker.cc">Blog</a>
+	<a target="_blank" href="http://www.jianshu.com/u/a9cadfb2a1ba">简书</a>
+	<a target="_blank" href="http://jwkso.com/wiki">wiki</a>
+	<a target="_blank" href="https://zhuanlan.zhihu.com/jwker">知乎专栏</a>
+	<a target="_blank" href="http://jwkso.com/editor/markdown.html">Markdown编辑器</a>
+</div> -->
+<script src="src/jquery.min.js"></script>
+<script src="src/main.js"></script>	
+<!-- <script type="text/javascript" src="src/canvas-particle.js"></script> -->
 <script>
-window.location.href = 'https://www.notion.so/Home-0059a9cc5e374b87902f8ca2be311fa4';
+    //配置
+    var config = {
+        vx: 4,//点x轴速度,正为右，负为左
+        vy:  4,//点y轴速度
+        height: 2,//点高宽，其实为正方形，所以不宜太大
+        width: 2,
+        count: 100,//点个数
+        color: "121, 162, 185",//点颜色
+        stroke: "130,255,255",//线条颜色
+        dist: 6000,//点吸附距离
+        e_dist: 20000,//鼠标吸附加速距离
+        max_conn: 10//点到点最大连接数
+    }
+    //调用
+    // CanvasParticle(config);
 </script>
 </body>
 </html>
