--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>-jwker.com</title>
+  <title>jwker.com</title>
+  <script>
+    location.href = 'https://www.notion.so/jwker/Home-0059a9cc5e374b87902f8ca2be311fa4'
+  </script>
 </head>
 <body>
-<script>
-location.href = 'https://www.notion.so/jwker/Home-0059a9cc5e374b87902f8ca2be311fa4'
-</script>
+  跳转中：https://www.notion.so/jwker/Home-0059a9cc5e374b87902f8ca2be311fa4
 </body>
 </html>
