--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>jwker.com</title>
   <script>
-    location.href = 'https://www.notion.so/jwker/Home-0059a9cc5e374b87902f8ca2be311fa4'
+    location.href = 'https://www.yuque.com/jwk_index/kx08aa/lgk16k';
   </script>
 </head>
 <body>
-  跳转中：https://www.notion.so/jwker/Home-0059a9cc5e374b87902f8ca2be311fa4
+  跳转中：https://www.yuque.com/jwk_index/kx08aa/lgk16k
 </body>
 </html>
