--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>jwker.com</title>
   <script>
-    location.href = 'https://www.yuque.com/jwk_index/kx08aa/lgk16k';
+    location.href = 'https://www.yuque.com/jwk_index/index';
   </script>
 </head>
 <body>
