--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>jwker.com</title>
   <script>
-    location.href = 'https://www.yuque.com/jwk_index/index';
+    location.href = 'https://www.yuque.com/jwk_index/00/lgk16k';
   </script>
 </head>
 <body>
-  跳转中：https://www.yuque.com/jwk_index/kx08aa/lgk16k
+  跳转中：https://www.yuque.com/jwk_index/00/lgk16k
 </body>
 </html>
