--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <title>jwker.com</title>
-  <script>
-    // location.href = 'https://www.yuque.com/jwk_index/00/lgk16k';
-  </script>
 </head>
-<body>
-  跳转中：https://www.yuque.com/jwk_index/00/lgk16k
-</body>
+  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.con/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+  <body style='margin : 0px; overflow: hidden;'>
+    <a-scene embedded arjs=' sourceType: webcam;'>
+      <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+      <a-marker-camera preset='hiro'></a-marker-camera>
+    </a-scene>
+  </body>
 </html>
